--- a/package.json
+++ b/package.json
@@ -8,18 +8,21 @@
     "url": "https://github.com/StephenGrider/Lyrical-GraphQL"
   },
   "scripts": {
-    "dev": "nodemon index.js --ignore client"
+    "dev": "nodemon index.js --ignore client",
+    "start": "nodemon index.js  --ignore client --exec babel-node --presets es2015,stage-2"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "nodemon": "*",
     "apollo-client": "^0.8.1",
     "axios": "^0.15.3",
+    "babel-cli": "^6.26.0",
     "babel-core": "^6.22.1",
     "babel-loader": "^6.2.10",
     "babel-preset-env": "^1.1.8",
     "babel-preset-react": "^6.22.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
     "body-parser": "^1.16.0",
     "connect-mongo": "^1.3.2",
     "css-loader": "^0.26.1",
@@ -30,6 +33,7 @@
     "html-webpack-plugin": "^2.26.0",
     "lodash": "^4.17.4",
     "mongoose": "^4.7.8",
+    "nodemon": "*",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "react": "15.4.2",
